                                                         -*- coding: utf-8 -*-
  Changes with Apache Traffic Server 3.3.3


  *) [TS-1867] The combo_handler plugin crashes when receiving non-200 responses.
    Author: Conan Wang <conanmind@gmail.com>

  *) [TS-1838] Improve configure.ac to recognize compiler setup better.

  *) [TS-1865] Support DESTDIR in tsxs.

  *) [TS-1864] Illumos / OmniOS needs -m64 with gcc to compile properly on
   64-bit platforms. We also only support ATS on 64-bit Illumos.

  *) [TS-1811] Make the HostDB sizes variable on the SRV enabled config.
   This restores compatibility with HostDB's prior to v3.3.1.

  *) [TS-1843] Detect and link libhwloc on Ubuntu.

  *) [TS-1858] Fix redefinition of timersub on Solaris.

  *) [TS-1861] Build fails with reclaimable freelist enabled.

  *) [TS-1860] cacheurl doesn't compile on platforms with pcre/pcre.h
   (e.g. solaris).

  *) [TS-1729] Fix channel_stats to compile on various Unixen. Note that this
   is still IPV4 only.

  *) [TS-1839] We fail "make test" on some platforms, due to install
   directory missing.

  *) [TS-1856] Replace SIZE() macro with COUNTOF() and countof().

  *) [TS-1853] Fix formatting in logstats to be consistenly 2 decimals.

  *) [TS-1852] Fix missing AC_PROG_SED on CentOS 5.9.

  *) [TS-1717] Fix the static build as much as possible.

  *) [TS-1851] Turn HostDBInfo back into a POD type.

  *) [TS-1850] Improve SSL certificate error reporting.

  *) [TS-1848] Fix MIMEHdr::field_value_set_int64() wrapper.
   Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  *) [TS-986] experimental.h has a dependency on netinet/net.h (for
  struct in_addr).

  *) [TS-1794 Replace all usage of ts_debug_assert() with ts_assert().

  *) [TS-1834] Force absolute paths to fix logstats unit tests.

  *) [TS-1817] Use the libaio interface to the Linux AIO system calls.

  *) [TS-1721] Integrate tstop into the autotools build.

  *) [TS-1706] Fix documentation for Config::Records.pm.
